libs/calculon/tokenizer.c
/* Generated by re2c 0.12.1 on Sat Dec  1 13:57:40 2007 */
#line 1 "tokenizer.re"
/* 
 * Copyright (C) 2006 Cooper Street Innovations Inc.
 *	Charles Eidsness    <charles@cooper-street.com>
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 * 
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 * 
 * You should have received a copy of the GNU General Public License
 * along with this program; if not, write to the Free Software
 * Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA 
 * 02110-1301, USA.
 *
 */

#include <math.h>
#include <log.h>
#include <data.h>
#include <ctype.h>

#include "tokenizer.h"
#include "parser.h"

/* RE Format parser defines */
#define	YYCTYPE		char
#define	YYCURSOR	cursor
#define	YYMARKER	marker

#line 37 "tokenizer.re"


#line 52 "tokenizer.re"


static token_ * tokenNew(int type, double **variable, double constant,
		double *minDiv)
{
	token_ *r;
	r = malloc(sizeof(token_));
	ReturnNULLIf(r == NULL, "Malloc Failed");
	r->type = type;
	r->variable = variable;
	r->constant = constant;
	r->minDiv = minDiv;
	return r;
}


int tokenSolve(token_ *r, tokenSolveArgs_ *args)
{
	ReturnErrIf(r == NULL);
	ReturnErrIf(args == NULL);
	
	if(args->diffVariable != NULL) {
		if((r->type == TOKEN_VARIABLE) && 
				(*(r->variable) == *(args->diffVariable))) {
			Debug("%s", ParseTokenName(TOKEN_DIFF_VARIABLE));
			Parse(args->parser, TOKEN_DIFF_VARIABLE, r, args->solution);
			ReturnErrIf(isnan(*args->solution), "Parser failed");
			return 0;
		}
	}
	
	Debug("%s", ParseTokenName(r->type));
	Parse(args->parser, r->type, r, args->solution);
	ReturnErrIf(isnan(*args->solution), "Parser failed");
	return 0;
}

int tokenDestroy(token_ *r)
{
	if(r != NULL) {
		free(r);
	}
	return 0;
}

#define Attach(tok, var, con, minDiv) \
	GotoFailedIf(listAdd(tokens, tokenNew(tok, var, con, minDiv), NULL))

list_ * tokenizerNew(char *buffer, tokenizerGetVarPtr getVarFunc, 
		void *private, double *minDiv)
{
	list_ *tokens = NULL;
	char *cursor = NULL, *marker = NULL, *start = NULL, *tmp, *comma, *lparen;
	double **variable;
	int i, c;
	
	ReturnNULLIf(buffer == NULL);
	ReturnNULLIf(getVarFunc == NULL);
	
	Debug("Creating tokenizer");
	tokens = listNew(tokens);
	ReturnNULLIf(tokens == NULL);
	cursor = buffer;
	marker = buffer;
	
parse:
	start = cursor;
{
	static const unsigned char yybm[] = {
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0, 128,  64,   0,   0,  64,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		128,   0,   0,  40,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		 24,  24,  24,  24,  24,  24,  24,  24, 
		 24,  24,  40,   0,   0,   0,   0,   0, 
		 40,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,   0,   0,   0,   0,  40, 
		  0,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,  40,  40,  40,  40,  40, 
		 40,  40,  40,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
		  0,   0,   0,   0,   0,   0,   0,   0, 
	};

#line 145 "tokenizer.c"
	{
		YYCTYPE yych;
		unsigned int yyaccept = 0;

		yych = *YYCURSOR;
		switch(yych) {
		case 0x00:	goto yy6;
		case 0x09:
		case ' ':	goto yy2;
		case 0x0A:
		case 0x0D:	goto yy4;
		case '!':	goto yy37;
		case '#':
		case ':':
		case '@':
		case 'B':
		case 'D':
		case 'F':
		case 'G':
		case 'H':
		case 'J':
		case 'K':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'b':
		case 'd':
		case 'f':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy47;
		case '&':	goto yy39;
		case '(':	goto yy27;
		case ')':	goto yy29;
		case '*':	goto yy21;
		case '+':	goto yy17;
		case '-':	goto yy19;
		case '.':	goto yy45;
		case '/':	goto yy23;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy43;
		case '<':	goto yy33;
		case '=':	goto yy35;
		case '>':	goto yy31;
		case 'A':
		case 'a':	goto yy8;
		case 'C':
		case 'c':	goto yy10;
		case 'E':
		case 'e':	goto yy11;
		case 'I':
		case 'i':	goto yy16;
		case 'L':
		case 'l':	goto yy12;
		case 'S':
		case 's':	goto yy13;
		case 'T':
		case 't':	goto yy14;
		case 'U':
		case 'u':	goto yy15;
		case 'V':
		case 'v':	goto yy46;
		case '^':	goto yy25;
		case '|':	goto yy41;
		default:	goto yy48;
		}
yy2:
		++YYCURSOR;
		yych = *YYCURSOR;
		goto yy188;
yy3:
#line 120 "tokenizer.re"
		{ goto parse; }
#line 246 "tokenizer.c"
yy4:
		yyaccept = 0;
		yych = *(YYMARKER = ++YYCURSOR);
		if(yybm[0+yych] & 64) {
			goto yy185;
		}
		if(yych == '+') goto yy184;
yy5:
#line 241 "tokenizer.re"
		{ Error("Unexpected character %s", cursor-1);	goto failed; }
#line 257 "tokenizer.c"
yy6:
		++YYCURSOR;
#line 121 "tokenizer.re"
		{ Attach(0, NULL, 0, NULL);						goto passed; }
#line 262 "tokenizer.c"
yy8:
		++YYCURSOR;
		if((yych = *YYCURSOR) <= 'T') {
			if(yych <= 'C') {
				if(yych <= 'A') goto yy50;
				if(yych <= 'B') goto yy156;
				goto yy157;
			} else {
				if(yych <= 'R') goto yy50;
				if(yych <= 'S') goto yy158;
				goto yy159;
			}
		} else {
			if(yych <= 'c') {
				if(yych <= 'a') goto yy50;
				if(yych <= 'b') goto yy156;
				goto yy157;
			} else {
				if(yych <= 'r') goto yy50;
				if(yych <= 's') goto yy158;
				if(yych <= 't') goto yy159;
				goto yy50;
			}
		}
yy9:
#line 230 "tokenizer.re"
		{
		tmp = malloc(cursor - start + 1);
		GotoFailedIf(tmp == NULL);
		/* NOTE: tmp is freed by the function it's passed to */
		strncpy(tmp, start, (cursor - start));
		tmp[cursor - start] = 0x0;
		variable = getVarFunc(tmp, private);
		GotoFailedIf(variable == NULL);
		Attach(TOKEN_VARIABLE, variable, 0, NULL);
		goto parse;
	}
#line 300 "tokenizer.c"
yy10:
		yych = *++YYCURSOR;
		if(yych == 'O') goto yy149;
		if(yych == 'o') goto yy149;
		goto yy50;
yy11:
		yych = *++YYCURSOR;
		if(yych == 'X') goto yy145;
		if(yych == 'x') goto yy145;
		goto yy50;
yy12:
		yych = *++YYCURSOR;
		if(yych <= 'O') {
			if(yych <= 'M') goto yy50;
			if(yych <= 'N') goto yy138;
			goto yy139;
		} else {
			if(yych <= 'm') goto yy50;
			if(yych <= 'n') goto yy138;
			if(yych <= 'o') goto yy139;
			goto yy50;
		}
yy13:
		yych = *++YYCURSOR;
		if(yych <= 'Q') {
			if(yych == 'I') goto yy126;
			if(yych <= 'P') goto yy50;
			goto yy127;
		} else {
			if(yych <= 'i') {
				if(yych <= 'h') goto yy50;
				goto yy126;
			} else {
				if(yych == 'q') goto yy127;
				goto yy50;
			}
		}
yy14:
		yych = *++YYCURSOR;
		if(yych == 'A') goto yy122;
		if(yych == 'a') goto yy122;
		goto yy50;
yy15:
		yych = *++YYCURSOR;
		if(yych <= 'Q') {
			if(yych == '(') goto yy115;
			goto yy50;
		} else {
			if(yych <= 'R') goto yy114;
			if(yych == 'r') goto yy114;
			goto yy50;
		}
yy16:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if(yych <= 'E') {
			if(yych == '(') goto yy109;
			goto yy50;
		} else {
			if(yych <= 'F') goto yy108;
			if(yych == 'f') goto yy108;
			goto yy50;
		}
yy17:
		++YYCURSOR;
#line 141 "tokenizer.re"
		{ Attach(TOKEN_PLUS, NULL, 0, minDiv);		goto parse; }
#line 368 "tokenizer.c"
yy19:
		++YYCURSOR;
#line 142 "tokenizer.re"
		{ Attach(TOKEN_MINUS, NULL, 0, minDiv);	goto parse; }
#line 373 "tokenizer.c"
yy21:
		++YYCURSOR;
#line 143 "tokenizer.re"
		{ Attach(TOKEN_TIMES, NULL, 0, minDiv);	goto parse; }
#line 378 "tokenizer.c"
yy23:
		++YYCURSOR;
#line 144 "tokenizer.re"
		{ Attach(TOKEN_DIVIDE, NULL, 0, minDiv);	goto parse; }
#line 383 "tokenizer.c"
yy25:
		++YYCURSOR;
#line 145 "tokenizer.re"
		{ Attach(TOKEN_POWER, NULL, 0, minDiv);	goto parse; }
#line 388 "tokenizer.c"
yy27:
		++YYCURSOR;
#line 146 "tokenizer.re"
		{ Attach(TOKEN_LPAREN, NULL, 0, NULL);		goto parse; }
#line 393 "tokenizer.c"
yy29:
		++YYCURSOR;
#line 147 "tokenizer.re"
		{ Attach(TOKEN_RPAREN, NULL, 0, NULL);		goto parse; }
#line 398 "tokenizer.c"
yy31:
		++YYCURSOR;
#line 148 "tokenizer.re"
		{ Attach(TOKEN_GREATERTHAN, NULL, 0, NULL);		goto parse; }
#line 403 "tokenizer.c"
yy33:
		++YYCURSOR;
#line 149 "tokenizer.re"
		{ Attach(TOKEN_LESSTHAN, NULL, 0, NULL);		goto parse; }
#line 408 "tokenizer.c"
yy35:
		++YYCURSOR;
#line 150 "tokenizer.re"
		{ Attach(TOKEN_EQUAL, NULL, 0, NULL);			goto parse; }
#line 413 "tokenizer.c"
yy37:
		++YYCURSOR;
#line 151 "tokenizer.re"
		{ Attach(TOKEN_NOT, NULL, 0, NULL);			goto parse; }
#line 418 "tokenizer.c"
yy39:
		++YYCURSOR;
#line 152 "tokenizer.re"
		{ Attach(TOKEN_AND, NULL, 0, NULL);		goto parse; }
#line 423 "tokenizer.c"
yy41:
		++YYCURSOR;
#line 153 "tokenizer.re"
		{ Attach(TOKEN_OR, NULL, 0, NULL);		goto parse; }
#line 428 "tokenizer.c"
yy43:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		switch(yych) {
		case '.':	goto yy103;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':	goto yy104;
		case 'E':
		case 'e':	goto yy64;
		case 'F':
		case 'f':	goto yy83;
		case 'G':
		case 'g':	goto yy68;
		case 'K':
		case 'k':	goto yy71;
		case 'M':
		case 'm':	goto yy86;
		case 'N':
		case 'n':	goto yy77;
		case 'P':
		case 'p':	goto yy80;
		case 'T':
		case 't':	goto yy65;
		case 'U':
		case 'u':	goto yy74;
		default:	goto yy89;
		}
yy44:
#line 164 "tokenizer.re"
		{ Attach(TOKEN_CONSTANT, NULL, atof(start), NULL); goto parse; }
#line 467 "tokenizer.c"
yy45:
		yych = *++YYCURSOR;
		if(yybm[0+yych] & 16) {
			goto yy62;
		}
		goto yy5;
yy46:
		yyaccept = 1;
		yych = *(YYMARKER = ++YYCURSOR);
		if(yych == '(') goto yy51;
		goto yy50;
yy47:
		yych = *++YYCURSOR;
		goto yy50;
yy48:
		yych = *++YYCURSOR;
		goto yy5;
yy49:
		++YYCURSOR;
		yych = *YYCURSOR;
yy50:
		if(yybm[0+yych] & 8) {
			goto yy49;
		}
		goto yy9;
yy51:
		yych = *++YYCURSOR;
		if(yych == ')') goto yy52;
		if(yych != ',') goto yy54;
yy52:
		YYCURSOR = YYMARKER;
		if(yyaccept <= 1) {
			if(yyaccept <= 0) {
				goto yy5;
			} else {
				goto yy9;
			}
		} else {
			goto yy44;
		}
yy53:
		++YYCURSOR;
		yych = *YYCURSOR;
yy54:
		if(yych <= '/') {
			if(yych <= '(') {
				if(yych == '#') goto yy53;
				goto yy52;
			} else {
				if(yych <= ')') goto yy55;
				if(yych == ',') goto yy57;
				goto yy52;
			}
		} else {
			if(yych <= '^') {
				if(yych <= ':') goto yy53;
				if(yych <= '?') goto yy52;
				if(yych <= 'Z') goto yy53;
				goto yy52;
			} else {
				if(yych == '`') goto yy52;
				if(yych <= 'z') goto yy53;
				goto yy52;
			}
		}
yy55:
		++YYCURSOR;
#line 213 "tokenizer.re"
		{
		tmp = malloc(cursor - start + 1);
		GotoFailedIf(tmp == NULL);
		/* NOTE: tmp is freed by the function it's passed to */
		strncpy(tmp, start, (cursor - start));
		/* change function name to lower case */
		for(i = 0; tmp[i] != '('; i++) {
			c = tolower(tmp[i]);
			GotoFailedIf(c == EOF);
			tmp[i] = c;
		}
		tmp[cursor - start] = 0x0;
		variable = getVarFunc(tmp, private);
		GotoFailedIf(variable == NULL);
		Attach(TOKEN_VARIABLE, variable, 0, NULL);
		goto parse;
	}
#line 553 "tokenizer.c"
yy57:
		yych = *++YYCURSOR;
		if(yych == ')') goto yy52;
		goto yy59;
yy58:
		++YYCURSOR;
		yych = *YYCURSOR;
yy59:
		if(yych <= ':') {
			if(yych <= '(') {
				if(yych == '#') goto yy58;
				goto yy52;
			} else {
				if(yych <= ')') goto yy60;
				if(yych <= '/') goto yy52;
				goto yy58;
			}
		} else {
			if(yych <= '^') {
				if(yych <= '?') goto yy52;
				if(yych <= 'Z') goto yy58;
				goto yy52;
			} else {
				if(yych == '`') goto yy52;
				if(yych <= 'z') goto yy58;
				goto yy52;
			}
		}
yy60:
		++YYCURSOR;
#line 165 "tokenizer.re"
		{
		/* TODO: This is a little inefficient, could clean it up someday, use
			re2c, there's no reason to go over this twice... but then the
			performance hit is so small who cares? */
		for(lparen = start; *lparen != '('; lparen++);
		for(comma = lparen; *comma != ','; comma++);
		
		/* First get left variable */
		tmp = malloc(comma - start + 2);
		GotoFailedIf(tmp == NULL);
		strncpy(tmp, start, (comma - start));
		/* change function name to lower case */
		for(i = 0; tmp[i] != '('; i++) {
			c = tolower(tmp[i]);
			GotoFailedIf(c == EOF);
			tmp[i] = c;
		}
		tmp[comma - start] = ')';
		tmp[comma - start + 1] = 0x0;
		variable = getVarFunc(tmp, private);
		GotoFailedIf(variable == NULL);
		Attach(TOKEN_LPAREN, NULL, 0, NULL)
		Attach(TOKEN_VARIABLE, variable, 0, NULL);
		
		/* Minus */
		Attach(TOKEN_MINUS, NULL, 0, minDiv);
		
		/* the right variable */
		tmp = malloc((lparen - start) + (cursor - comma) + 2);
		GotoFailedIf(tmp == NULL);
		/* NOTE: tmp is freed by the function it's passed to */
		strncpy(tmp, start, (lparen - start + 1));
		Debug("%s", tmp);
		strncpy(&tmp[(lparen - start)+1], comma+1, (cursor - comma));
		Debug("%s", tmp);
		/* change function name to lower case */
		for(i = 0; tmp[i] != '('; i++) {
			c = tolower(tmp[i]);
			GotoFailedIf(c == EOF);
			tmp[i] = c;
		}
		tmp[lparen - start + cursor - comma] = 0x0;
		variable = getVarFunc(tmp, private);
		GotoFailedIf(variable == NULL);
		Attach(TOKEN_VARIABLE, variable, 0, NULL);
		Attach(TOKEN_RPAREN, NULL, 0, NULL);
		goto parse;
	}
#line 633 "tokenizer.c"
yy62:
		++YYCURSOR;
		yych = *YYCURSOR;
		if(yybm[0+yych] & 16) {
			goto yy62;
		}
		switch(yych) {
		case '#':
		case ':':
		case '@':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'H':
		case 'I':
		case 'J':
		case 'L':
		case 'O':
		case 'Q':
		case 'R':
		case 'S':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'h':
		case 'i':
		case 'j':
		case 'l':
		case 'o':
		case 'q':
		case 'r':
		case 's':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':	goto yy88;
		case 'E':
		case 'e':	goto yy64;
		case 'F':
		case 'f':	goto yy83;
		case 'G':
		case 'g':	goto yy68;
		case 'K':
		case 'k':	goto yy71;
		case 'M':
		case 'm':	goto yy86;
		case 'N':
		case 'n':	goto yy77;
		case 'P':
		case 'p':	goto yy80;
		case 'T':
		case 't':	goto yy65;
		case 'U':
		case 'u':	goto yy74;
		default:	goto yy44;
		}
yy64:
		yyaccept = 2;
		yych = *(YYMARKER = ++YYCURSOR);
		if(yych <= ',') {
			if(yych == '+') goto yy100;
			goto yy89;
		} else {
			if(yych <= '-') goto yy100;
			if(yych <= '/') goto yy89;
			if(yych <= '9') goto yy101;
			goto yy89;
		}
yy65:
		++YYCURSOR;
		yych = *YYCURSOR;
		if(yybm[0+yych] & 32) {
			goto yy65;
		}
#line 154 "tokenizer.re"
		{ Attach(TOKEN_CONSTANT, NULL, atof(start)*1e12, NULL); goto parse; }
#line 719 "tokenizer.c"
yy68:
		++YYCURSOR;
		yych = *YYCURSOR;
		if(yych <= '?') {
			if(yych <= '#') {
				if(yych >= '#') goto yy68;
			} else {
				if(yych == ':') goto yy68;
			}
		} else {
			if(yych <= '_') {
				if(yych <= 'Z') goto yy68;
				if(yych >= '_') goto yy68;
			} else {
				if(yych <= '`') goto yy70;
				if(yych <= 'z') goto yy68;
			}
		}
yy70:
#line 155 "tokenizer.re"
		{ Attach(TOKEN_CONSTANT, NULL, atof(start)*1e9, NULL); goto parse; }
#line 741 "tokenizer.c"
yy71:
		++YYCURSOR;
		yych = *YYCURSOR;
		if(yych <= '?') {
			if(yych <= '#') {
				if(yych >= '#') goto yy71;
			} else {
				if(yych == ':') goto yy71;
			}
		} else {
			if(yych <= '_') {
				if(yych <= 'Z') goto yy71;
				if(yych >= '_') goto yy71;
			} else {
				if(yych <= '`') goto yy73;
				if(yych <= 'z') goto yy71;
			}
		}
yy73:
#line 156 "tokenizer.re"
